--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,14 +1,14 @@
 spring.application.name=yumdelivery
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5433/yum_db
-spring.datasource.username=yum
-spring.datasource.password=1234
+spring.datasource.url=${POSTGRES_URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Redis Configuration
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
 spring.data.redis.timeout=10000
 
 # JPA Configuration
@@ -18,6 +18,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JWT Configuration
-jwt.secret-key=fxZzy8z1y6f2@zxw!xs390u.dF.EqXSDFx$$33zvYzzzzzzxYzzzyssssssssaaYaawqsx2Axf2AJOAIOS9aaou0931AZ$$Z12aF1.2uF1F12WSF23A9
+jwt.secret-key=${JWT_SECRET}
 jwt.access-token-validity-in-minutes=5
 jwt.refresh-token-validity-in-days=14
